# annotation_101

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.cpu  Dockerfile.dev  Dockerfile.gpu  LICENSE  Makefile  README.md  SECURITY.md  api_server.py  batch_annotate.py  docker-compose.yml  process_and_render_realtime.py  pyproject.toml  readme2.md  render_hands_continuous.py  render_hands_video.py  setup_guide.md  test_loader.py
.claude/: settings.local.json
.devcontainer/: PYTORCH_CUDA_INSTALL.md  devcontainer.json  devcontainer.json.bak-20260108-122537
.github/prompts/: speckit.implement.prompt.md  speckit.tasks.prompt.md
.github/workflows/: ci-cd.yml
configs/: README.md  default.yaml  high_performance.yaml  laion_pipelines.yaml  lightweight.yaml  openface3.yaml  person_identity.yaml
docs/: Figure 1.docx  GETTING_STARTED_REVIEWERS.md  PARTIAL_SUCCESS_ADVISORY.md  README.md  joss.md  locale.md  pipelines_spec.md
docs/archive/: Demo_Commands.md  Demo_Commands_Improved.md  Environment_Setup.md  Getting_Started.md  Installation.md  LAION_Integration.md  PersonID_Implementation_Guide.md  README.md  ROADMAP.md  SCHEMA_REVIEW.md  Technical_Specification.md  batch_processing_plan_v1.1.2.md  diarization_implementation_v1.1.2.md  diarization_pipeline_v1.1.2.md  index.md  laion_implementation_plan_v1.2.0.md  person_id_implementation_v1.1.2.md  size_based_analysis_v1.1.2.md  versioning.md
docs/deployment/: Docker.md
docs/development/: CORS_AND_AUTH_PROTOCOL.md  EXAMPLES_CLI_UPDATE_CHECKLIST.md  PRE_COMMIT_GUIDE.md  README.md  emotion_output_format.md  joss_testing_ci_polish.md  output_naming_conventions.md  roadmap_v1.4.0.md  roadmap_v1.5.0.md  scripts_inventory.md
docs/installation/: ENVIRONMENT_SETUP.md  INSTALLATION.md  PythonDev2025.md  troubleshooting.md
docs/performance/: TOKEN_VALIDATION_FIX.md
docs/security/: README.md  authentication.md  cors.md  production_checklist.md
docs/testing/: CLIENT_SERVER_DEBUG_TOOLS.md  Issues for Server Team.md  Jerry-issues.md  README.md  SERVER_SIDE_IMPROVEMENTS.md  TEAM_HANDOFF_PACKAGE.md  TESTING_COLLABORATION_GUIDE.md  batch_testing_guide.md  coverage_report.md  testing_overview.md  testing_standards.md
docs/usage/: CLIENT_TOKEN_SETUP_GUIDE.md  GETTING_STARTED.md  README.md  accessing_results.md  configuration.md  demo_commands.md  environment_variables.md  pipeline_specs.md  scene_detection.md  troubleshooting.md
examples/: README.md  basic_video_processing.py  batch_processing.py  custom_pipeline_config.py  diarization_example.py  size_based_analysis_demo.py  test_individual_pipelines.py  test_laion_voice_pipeline.py
paper/: checklist.md  cover_letter.md  paper.bib  paper.md
reports/: pydocstyle_by_file.txt  pydocstyle_summary.md
scripts/: README.md  __init__.py  auto_fix_pydocstyle.py  browser_debug_console.js  cleanup_orphaned_storage.py  debug_load_job.py  demo_openface.py  demo_person_id.py  demo_phase2_integration.py  generate_pipeline_specs.py  install_hadolint.sh  label_persons.py  libcst_docstring_normalizer.py  manage_tokens.py  run_hadolint.sh  run_pydocstyle.sh  run_size_based_analysis.py  test_all.py  test_api_quick.py  test_fast.py  test_integration.py  test_logging.py  test_person_id.py  test_pipeline_integration.py  test_pipelines.py  validate_coverage.py  verify_pipeline_consistency.py
scripts/auth/: create_test_key.py  get_api_key.py
scripts/devtools/: analyze_tests.py  findimports.py  fix_imports.py  fix_imports_systematic.py
scripts/validation/: validate_apis.py
specs/001-videoannotator-v1-3/: JOSS_READINESS_ASSESSMENT.md  data-model.md  plan-phase1.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-flexible-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/videoannotator/: __init__.py  cli.py  config.py  config_env.py  main.py  version.py
tests/: README.md  __init__.py  conftest.py
tests/api/: __init__.py  test_api_server.py  test_health.py  test_video_storage_fix.py
tests/fixtures/: README.md  __init__.py  synthetic_video.py
tests/integration/: __init__.py  test_api_integration.py  test_api_live_server.py  test_background_processing.py  test_batch_orchestration.py  test_batch_orchestrator_real.py  test_batch_storage.py  test_concurrency.py  test_config_validation.py  test_enhanced_logging.py  test_error_envelope.py  test_face_openface3_registration.py  test_job_cancellation.py  test_job_submission_validation.py  test_person_identity.py  test_progress_tracker_real.py  test_recovery_real.py  test_simple_workflows.py  test_storage_paths.py  test_storage_provider_integration.py  test_storage_real.py
tests/pipelines/: __init__.py  test_audio_individual_components.py  test_audio_pipeline.py  test_audio_speech_pipeline.py  test_face_analysis.py  test_laion_face.py  test_laion_voice.py  test_openface3.py  test_person_tracking.py  test_scene_detection.py  test_whisper_base_pipeline.py  test_whisper_base_pipeline_stage1.py
tests/unit/: __init__.py  test_api_startup.py  test_config_env.py  test_cors_config.py  test_diagnostics.py  test_namespace.py
video-annotation-viewer/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  lighthouserc.json  openapi_spec.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
video-annotation-viewer/.claude/: settings.local.json
video-annotation-viewer/.github/: copilot-instructions.md
video-annotation-viewer/docs/: CLIENT_SERVER_COLLABORATION_GUIDE.md  DEBUGUTILS_GUIDE.md  DEVELOPER_GUIDE.md  FILE_FORMATS.md  Issues for Server Team.md  JOSS_BUILD.md  LOCALHOST_TROUBLESHOOTING.md  Original Spec.md  README.md  TESTING_GUIDE.md  joss.md
video-annotation-viewer/e2e/: smoke.spec.ts
video-annotation-viewer/paper/: checklist.md  cover-letter.md  paper.bib  paper.md
video-annotation-viewer/public/: test.html  (+1 more)
(+338 files in other folders)
